--- a/Pear/Controllers/New New Redesign/User Creation/Landing Screen/LandingScreenViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/User Creation/Landing Screen/LandingScreenViewController.storyboard
@@ -6,16 +6,12 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="Cera-Pro-Black.otf">
             <string>CeraPro-Black</string>
-        </array>
-        <array key="OpenSans-Bold.ttf">
-            <string>OpenSans-Bold</string>
         </array>
         <array key="OpenSans-ExtraBold.ttf">
             <string>OpenSans-ExtraBold</string>
@@ -33,26 +29,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pear-icon-green" translatesAutoresizingMaskIntoConstraints="NO" id="Yfc-4O-4AC">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="pear-icon-green" translatesAutoresizingMaskIntoConstraints="NO" id="Yfc-4O-4AC">
                                 <rect key="frame" x="142.5" y="106" width="90" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="mln-QQ-gkQ"/>
                                     <constraint firstAttribute="width" secondItem="Yfc-4O-4AC" secondAttribute="height" multiplier="1:1" id="xK1-LB-5Qs"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PEAR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gXf-y1-8Al">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="PEAR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gXf-y1-8Al">
                                 <rect key="frame" x="20" y="204" width="335" height="60"/>
                                 <fontDescription key="fontDescription" name="CeraPro-Black" family="Cera Pro" pointSize="60"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dating + friends" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eht-Lt-t1k">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="dating + friends" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eht-Lt-t1k">
                                 <rect key="frame" x="30" y="272" width="315" height="28"/>
                                 <fontDescription key="fontDescription" name="OpenSans-SemiBold" family="Open Sans SemiBold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6LX-bT-a7M">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6LX-bT-a7M">
                                 <rect key="frame" x="30" y="312" width="315" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+1" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0R5-Sw-ieU">
@@ -83,7 +79,7 @@
                                     <constraint firstItem="0R5-Sw-ieU" firstAttribute="top" secondItem="6LX-bT-a7M" secondAttribute="top" constant="8" id="wSP-ht-LVL"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mdH-2H-OCq">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mdH-2H-OCq">
                                 <rect key="frame" x="20" y="382" width="335" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="jqR-0K-BQa"/>
@@ -92,26 +88,16 @@
                                     <action selector="termsButtonClicked:" destination="rCb-Xw-oUi" eventType="touchUpInside" id="ADL-fJ-y87"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WCs-n7-FWi">
-                                <rect key="frame" x="20" y="414" width="335" height="33"/>
-                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="15"/>
-                                <state key="normal" title="Got an event code?">
-                                    <color key="titleColor" name="primaryTextColor"/>
-                                </state>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="3yk-8c-7g0" firstAttribute="trailing" secondItem="6LX-bT-a7M" secondAttribute="trailing" constant="30" id="12E-JE-3pv"/>
-                            <constraint firstItem="WCs-n7-FWi" firstAttribute="top" secondItem="mdH-2H-OCq" secondAttribute="bottom" constant="12" id="8Vc-HN-kZN"/>
                             <constraint firstItem="Yfc-4O-4AC" firstAttribute="centerX" secondItem="3yk-8c-7g0" secondAttribute="centerX" id="AM8-QT-k9y"/>
                             <constraint firstItem="6LX-bT-a7M" firstAttribute="centerX" secondItem="3yk-8c-7g0" secondAttribute="centerX" id="GFs-jn-nTU"/>
-                            <constraint firstItem="3yk-8c-7g0" firstAttribute="bottom" secondItem="WCs-n7-FWi" secondAttribute="bottom" constant="220" id="Ltk-vk-ZfX"/>
                             <constraint firstItem="gXf-y1-8Al" firstAttribute="leading" secondItem="3yk-8c-7g0" secondAttribute="leading" constant="20" id="RZ8-yT-s58"/>
                             <constraint firstItem="eht-Lt-t1k" firstAttribute="leading" secondItem="3yk-8c-7g0" secondAttribute="leading" constant="30" id="Sgx-ZS-vtE"/>
                             <constraint firstItem="3yk-8c-7g0" firstAttribute="trailing" secondItem="gXf-y1-8Al" secondAttribute="trailing" constant="20" id="WSA-07-Klb"/>
                             <constraint firstItem="gXf-y1-8Al" firstAttribute="top" secondItem="Yfc-4O-4AC" secondAttribute="bottom" constant="8" id="XLI-7G-s0h"/>
-                            <constraint firstItem="3yk-8c-7g0" firstAttribute="trailing" secondItem="WCs-n7-FWi" secondAttribute="trailing" constant="20" id="a5l-gA-Ufd"/>
                             <constraint firstItem="eht-Lt-t1k" firstAttribute="centerX" secondItem="3yk-8c-7g0" secondAttribute="centerX" id="gM7-eh-O7j"/>
                             <constraint firstItem="6LX-bT-a7M" firstAttribute="leading" secondItem="3yk-8c-7g0" secondAttribute="leading" constant="30" id="hdb-eX-Fv0"/>
                             <constraint firstItem="mdH-2H-OCq" firstAttribute="leading" secondItem="3yk-8c-7g0" secondAttribute="leading" constant="20" id="i2g-Wd-DIn"/>
@@ -120,12 +106,10 @@
                             <constraint firstItem="eht-Lt-t1k" firstAttribute="top" secondItem="gXf-y1-8Al" secondAttribute="bottom" constant="8" id="noF-P2-ngD"/>
                             <constraint firstItem="6LX-bT-a7M" firstAttribute="top" secondItem="eht-Lt-t1k" secondAttribute="bottom" constant="12" id="vca-Jp-JJa"/>
                             <constraint firstItem="3yk-8c-7g0" firstAttribute="trailing" secondItem="eht-Lt-t1k" secondAttribute="trailing" constant="30" id="x3I-Ok-cVq"/>
-                            <constraint firstItem="WCs-n7-FWi" firstAttribute="leading" secondItem="3yk-8c-7g0" secondAttribute="leading" constant="20" id="y4o-CR-2f3"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3yk-8c-7g0"/>
                     </view>
                     <connections>
-                        <outlet property="eventCodeBottomConstraint" destination="Ltk-vk-ZfX" id="geI-W2-trR"/>
                         <outlet property="inputTextField" destination="j1o-6t-8ui" id="pDH-YO-Y6B"/>
                         <outlet property="logoImageView" destination="Yfc-4O-4AC" id="hNa-J6-fG3"/>
                         <outlet property="phoneNumberContainerView" destination="6LX-bT-a7M" id="Cp5-HC-2bO"/>
@@ -138,8 +122,5 @@
     </scenes>
     <resources>
         <image name="pear-icon-green" width="118" height="145"/>
-        <namedColor name="primaryTextColor">
-            <color red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
     </resources>
 </document>
