--- a/Pear/Controllers/Me Tab/Me Main VC/MeTabMainViewController.storyboard
+++ b/Pear/Controllers/Me Tab/Me Main VC/MeTabMainViewController.storyboard
@@ -59,15 +59,25 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U9J-xf-cg1">
                                         <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oe3-TW-8Ly">
+                                        <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                        <connections>
+                                            <action selector="imageViewClicked:" destination="A2C-JQ-kCF" eventType="touchUpInside" id="dn0-R8-tc8"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="U9J-xf-cg1" firstAttribute="top" secondItem="hSh-ba-B1Y" secondAttribute="top" id="BLl-Ls-gjA"/>
                                     <constraint firstAttribute="height" constant="180" id="Bu3-UO-Vwg"/>
+                                    <constraint firstItem="Oe3-TW-8Ly" firstAttribute="width" secondItem="U9J-xf-cg1" secondAttribute="width" id="G40-xO-Oc0"/>
                                     <constraint firstAttribute="width" secondItem="hSh-ba-B1Y" secondAttribute="height" multiplier="1:1" id="INC-Ka-YeK"/>
                                     <constraint firstAttribute="bottom" secondItem="U9J-xf-cg1" secondAttribute="bottom" id="KNT-sH-Dc0"/>
+                                    <constraint firstItem="Oe3-TW-8Ly" firstAttribute="height" secondItem="U9J-xf-cg1" secondAttribute="height" id="S4M-Vo-Bee"/>
                                     <constraint firstAttribute="trailing" secondItem="U9J-xf-cg1" secondAttribute="trailing" id="dPa-Ae-LNy"/>
+                                    <constraint firstItem="Oe3-TW-8Ly" firstAttribute="centerX" secondItem="U9J-xf-cg1" secondAttribute="centerX" id="dVW-ew-ixA"/>
                                     <constraint firstItem="U9J-xf-cg1" firstAttribute="leading" secondItem="hSh-ba-B1Y" secondAttribute="leading" id="hFd-3Z-Nkc"/>
+                                    <constraint firstItem="Oe3-TW-8Ly" firstAttribute="centerY" secondItem="U9J-xf-cg1" secondAttribute="centerY" id="l8J-Jj-tLd"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Hidden" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFO-u6-lSz">
