Fixes paylod and spacing issues

--- a/Pear/Controllers/Approve Profile Flow/Profile Found Page/ApproveDetachedProfileFoundViewController.storyboard
+++ b/Pear/Controllers/Approve Profile Flow/Profile Found Page/ApproveDetachedProfileFoundViewController.storyboard
@@ -55,7 +55,7 @@
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5l8-fa-P3y">
-                                <rect key="frame" x="0.0" y="250" width="375" height="288.5"/>
+                                <rect key="frame" x="0.0" y="258" width="375" height="272.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4IY-6r-Yz8">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
@@ -89,13 +89,13 @@
                             <constraint firstItem="5l8-fa-P3y" firstAttribute="leading" secondItem="gQ4-0s-yY9" secondAttribute="leading" id="Den-IE-C3b"/>
                             <constraint firstItem="VlL-Dh-foD" firstAttribute="top" secondItem="gQ4-0s-yY9" secondAttribute="top" constant="30" id="G9r-s8-5ZZ"/>
                             <constraint firstItem="13a-lb-DzA" firstAttribute="centerX" secondItem="gQ4-0s-yY9" secondAttribute="centerX" id="JNx-Bc-qKY"/>
-                            <constraint firstItem="ODI-3H-cEt" firstAttribute="top" secondItem="5l8-fa-P3y" secondAttribute="bottom" id="NS1-NX-2nd"/>
+                            <constraint firstItem="ODI-3H-cEt" firstAttribute="top" secondItem="5l8-fa-P3y" secondAttribute="bottom" constant="8" id="NS1-NX-2nd"/>
                             <constraint firstItem="gQ4-0s-yY9" firstAttribute="trailing" secondItem="1M0-2N-JNX" secondAttribute="trailing" constant="30" id="Nud-I0-d8K"/>
                             <constraint firstItem="gQ4-0s-yY9" firstAttribute="trailing" secondItem="ODI-3H-cEt" secondAttribute="trailing" constant="30" id="RdE-46-tBD"/>
                             <constraint firstItem="1M0-2N-JNX" firstAttribute="top" secondItem="ODI-3H-cEt" secondAttribute="bottom" constant="10" id="UYU-LN-BPd"/>
                             <constraint firstItem="13a-lb-DzA" firstAttribute="top" secondItem="VlL-Dh-foD" secondAttribute="bottom" constant="20" id="W0d-pl-HIJ"/>
                             <constraint firstItem="gQ4-0s-yY9" firstAttribute="trailing" secondItem="13a-lb-DzA" secondAttribute="trailing" constant="30" id="WVd-0d-VZg"/>
-                            <constraint firstItem="5l8-fa-P3y" firstAttribute="top" secondItem="13a-lb-DzA" secondAttribute="bottom" id="eFo-tM-eTY"/>
+                            <constraint firstItem="5l8-fa-P3y" firstAttribute="top" secondItem="13a-lb-DzA" secondAttribute="bottom" constant="8" id="eFo-tM-eTY"/>
                             <constraint firstItem="gQ4-0s-yY9" firstAttribute="bottom" secondItem="1M0-2N-JNX" secondAttribute="bottom" constant="30" id="zAc-RO-PT7"/>
                             <constraint firstAttribute="trailing" secondItem="5l8-fa-P3y" secondAttribute="trailing" id="zlH-BY-pQ5"/>
                         </constraints>
